fix scrollbar

--- a/pocindle-client/src/index.scss
+++ b/pocindle-client/src/index.scss
@@ -23,6 +23,6 @@ body {
   font-family: Roboto, Oxygen, -apple-system, BlinkMacSystemFont, Segoe UI,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif !important;
   font-size: 16px;
-  overflow-y: scroll;
+  overflow-y: auto;
   color: var(--text);
 }
